--- a/three.js/2.vite_setup/INSTALLATION/src/style.css
+++ b/three.js/2.vite_setup/INSTALLATION/src/style.css
@@ -499,9 +499,20 @@ video {
 [hidden]:where(:not([hidden="until-found"])) {
   display: none;
 }
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+.absolute {
+  position: absolute;
+}
+.left-0 {
+  left: 0px;
+}
+.top-0 {
+  top: 0px;
+}
+.h-screen {
+  height: 100vh;
+}
+.w-full {
+  width: 100%;
 }
 .bg-purple-500 {
   --tw-bg-opacity: 1;
